Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

Changes for 1.4 (not yet released)
==================================

 o #15571 Changed I_SecurityQos interface to have exchangable SecurityQos for ldap,htpasswd,simple
          This allows changing the server side security plugin (from for example htpasswd to ldap)
          even if the client is not touched.

 o #15563 Bugfix: Thread/memory leak on clients with failed authentication
          and not closing the socket

 o #15562 Bugfix: NPE during callback of oneway messages

 o #15557 Added switch -xmlBlaster/useSessionMarker (defaults to false)
          To switch between old "client/joe/1" notation and new "client/joe/session/1" notation
	  Default is again false to be backward compatible with older clients,
	  should be changed to true on release 2.0

 o #15556 Fixed C++ client to handle 'joe/2' or 'joe/session/2' or 'client/joe/session/2' syntax

 o #15549 Fixed the possible NPE in SocketConnection in case a client wants to use it directly. It can now read the cfg out of
          the Global properties too, thanks to Oliver Fels. 
 
 o #15541 Fixed plugin load/unload/reload lifecycle, fixed plugin JMX re-registration

 o #15534 Added support for dynamically loaded plugins, the jar file is send in the message content
          See http://www.xmlBlaster.org/xmlBlaster/doc/requirements/engine.runlevel.howto.html#dynamic

 o #15525 added cleanup of reads in dispatch statistics when an exception occurs when writing to the socket (normally by pings).
          Without it clients would not reconnect if the exception occured when receiving messages.

 o #15524 Using now default XML parser of the virtual machine (usually no configuration
          is needed in xmlBlaster.properties anymore)

 o #15523 Changed default syntax from 'client/joe/1' to 'client/joe/session/1
          Passing old notation is still supported
